# ChangeLog for x11-base/xorg-server
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.248 2007/07/02 16:05:59 armin76 Exp $

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  xorg-server-1.2.0-r3.ebuild:
  alpha stable wrt #175465

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  xorg-server-1.1.1-r1.ebuild, xorg-server-1.1.1-r5.ebuild,
  xorg-server-1.2.0-r3.ebuild, xorg-server-1.2.99.0.ebuild,
  xorg-server-1.3.0.0.ebuild:
  (QA) RESTRICT clean up.

  24 Jun 2007; Piotr Jaroszyński <peper@gentoo.org>
  xorg-server-1.2.99.0.ebuild:
  (QA) Don't use KEYWORDS="-*". bug #160519.

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> xorg-server-1.2.0-r3.ebuild:
  Stable on mips, per #175465.

  04 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  xorg-server-1.3.0.0.ebuild:
  (#180855) Fix ati-drivers support. My last commit never made it in because
  of a conflict I didn't notice.

  02 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  xorg-server-1.3.0.0.ebuild:
  (#180611) Remove blocker on ati-drivers so the below change works.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> xorg-server-1.2.0-r3.ebuild:
  Stable for HPPA (bug #175465).

  12 May 2007; nixnut <nixnut@gentoo.org> xorg-server-1.2.0-r3.ebuild:
  Stable on ppc wrt bug 175465

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
  xorg-server-1.2.0-r3.ebuild:
  Marked stable on amd64 for bug #175465

  05 May 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  xorg-server-1.3.0.0.ebuild:
  Add a dependency on libXfixes when building dmx.  Thanks to Hopeless of
  bug #177173.

  04 May 2007; Samuli Suominen <drac@gentoo.org> xorg-server-1.3.0.0.ebuild:
  Allow also nvidia-drivers-8xxx series, and nvidia-legacy-drivers-7xxx for
  bug 176648 as they are needed for older cards. Bug 175503 is only about
  ati-drivers.

  02 May 2007; Donnie Berkholz <dberkholz@gentoo.org>;